--- a/.github/workflows/update_ics.yml
+++ b/.github/workflows/update_ics.yml
@@ -1,1 +1,34 @@
+name: Update ICS
+
+on:
+  push:
+    paths:
+      - 'schedule.csv'     # 当 schedule.csv 更新时触发
+  workflow_dispatch:       # 支持手动触发
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: pip install pandas ics pytz
+
+      - name: Generate .ics file
+        run: python generate_ics.py
+
+      - name: Commit and push updated .ics
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add EriePrep_Boys_Basketball.ics
+          git commit -m "Auto update EriePrep_Boys_Basketball.ics"
+          git push
 
